# rust-api-seed

./: Cargo.toml  Dockerfile
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  post-create.sh  post-start.sh
.devcontainer-old/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
src/: main.rs
templates/deployment/: release.yaml
tools/: bootstrap-flux.sh
