[package]
name = "cluster-agent"
version = "0.1.2"
authors = ["Tim Park <timfpark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
pretty_env_logger = "0.4"
prometheus = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
